Fix mobile overflow

--- a/css/index.css
+++ b/css/index.css
@@ -247,6 +247,7 @@
       
       .upcomingevents {
           height:100%;
+          overflow:auto;
       }
       
       .about-us-text{
